--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,18 @@
     <color name="white">#FFFFFF</color>
     <color name="color1">#424549</color>
     <color name="color2">#A5B0B5</color>
+    <color name="userColorPrimary">#49BEFF</color>
+    <color name="userColorPrimaryDark">#65DCE5</color>
+    <color name="userAccent">#0D5D98</color>
+    <color name="userHeadings">#2F7092</color>
+    <color name="userSolidCircle">#80ffffff</color>
+    <color name="userRectangleBorder">#30ffffff</color>
+    <color name="userGradStartRed">#63C9FF</color>
+    <color name="userGradEndRed">#67EFC8</color>
+    <color name="userGradStartBlue">#FE0000</color>
+    <color name="userGradEndBlue">#FF7575</color>
+    <color name="userFollowersBg">#65DCE5</color>
+    <color name="userProfileButtonColor">#49BEFF</color>
+    <color name="grey">#BFC3C7</color>
 
 </resources>
