--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,10 +13,10 @@
     <color name="userHeadings">#2F7092</color>
     <color name="userSolidCircle">#80ffffff</color>
     <color name="userRectangleBorder">#30ffffff</color>
-    <color name="userGradStartRed">#63C9FF</color>
-    <color name="userGradEndRed">#67EFC8</color>
-    <color name="userGradStartBlue">#FE0000</color>
-    <color name="userGradEndBlue">#FF7575</color>
+    <color name="userGradStartBlue">#63C9FF</color>
+    <color name="userGradEndBlue">#67EFC8</color>
+    <color name="userGradStartRed">#FE0000</color>
+    <color name="userGradEndRed">#FF7575</color>
     <color name="userFollowersBg">#65DCE5</color>
     <color name="userProfileButtonColor">#49BEFF</color>
     <color name="grey">#BFC3C7</color>
