--- a/app/src/main/res/layout/activity_user_profile_page.xml
+++ b/app/src/main/res/layout/activity_user_profile_page.xml
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content">
         <LinearLayout
             android:id="@+id/userDetails"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="5dp"
             android:orientation="vertical"
@@ -84,6 +84,7 @@
                     android:layout_marginBottom="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="7"
                     android:layout_gravity="center"
                     android:orientation="vertical">
 
@@ -102,23 +103,21 @@
                         android:textSize="18sp"
                         android:text="nani@haha.com" />
                 </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:id="@+id/profileEditEmailButton"
-                        android:layout_width="50dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginTop="0dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginBottom="0dp"
-                        android:layout_height="50dp"
-                        android:onClick="OnUserProfileEditEmailButtonClick"
-                        android:src="@drawable/ic_edit"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerInside"
-                        />
-                </RelativeLayout>
+
+                <ImageView
+                    android:id="@+id/profileEditEmailButton"
+                    android:layout_weight="0"
+                    android:clickable="true"
+                    android:layout_width="50dp"
+                    android:onClick="OnUserProfileEditEmailButtonClick"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_edit"
+                    android:scaleType="centerInside"
+                    />
+
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
@@ -126,16 +125,19 @@
                 android:layout_marginTop="15dp"
                 android:background="@color/grey" />
             <LinearLayout
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_weight="1"
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_marginBottom="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="7"
                     android:layout_gravity="center"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -143,6 +145,7 @@
                         android:textSize="13sp"
                         android:text="Password"/>
                     <TextView
+                        android:id="@+id/profilePassword"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
@@ -150,23 +153,21 @@
                         android:textSize="18sp"
                         android:text="########" />
                 </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:id="@+id/profileEditPasswordButton"
-                        android:layout_width="50dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginTop="0dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginBottom="0dp"
-                        android:layout_height="50dp"
-                        android:onClick="OnUserProfileEditPasswordButtonClick"
-                        android:src="@drawable/ic_edit"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerInside"
-                        />
-                </RelativeLayout>
+
+                <ImageView
+                    android:id="@+id/profileEditPasswordButton"
+                    android:layout_weight="0"
+                    android:clickable="true"
+                    android:layout_width="50dp"
+                    android:onClick="OnUserProfileEditPasswordButtonClick"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_edit"
+                    android:scaleType="centerInside"
+                    />
+
             </LinearLayout>
         </LinearLayout>
     <RelativeLayout
