--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -74,8 +74,7 @@
                         android:id="@+id/EditEventPublic"
                         android:layout_width="1dp"
                         android:layout_height="wrap_content"
-                        android:hint="@string/event_public_hint"
-                        android:text="@string/event_is_public" />
+                        android:hint="@string/event_public_hint" />
                 </TableRow>
 
                 <TableRow
@@ -155,6 +154,22 @@
                         android:hint="@string/event_calendar_hint"
                         android:inputType="textShortMessage"
                         android:singleLine="true" />
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/EditEventEmergencyHint"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/event_is_emergency_enabled" />
+
+                    <Switch
+                        android:id="@+id/EditEventEmergency"
+                        android:layout_width="1dp"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/event_emergency_hint" />
                 </TableRow>
             </TableLayout>
 
