User profile activity now users Polycontext User instead of looking up using directly in firebase

--- a/app/src/main/res/layout/activity_user_profile_page.xml
+++ b/app/src/main/res/layout/activity_user_profile_page.xml
@@ -104,7 +104,9 @@
                         android:text="nani@haha.com" />
                 </LinearLayout>
 
+                <!--invisible for now, TODO change if implement email change-->
                 <ImageView
+                    android:visibility="invisible"
                     android:id="@+id/profileEditEmailButton"
                     android:layout_weight="0"
                     android:clickable="true"
