--- a/app/src/main/res/layout/fragment_group_member_list.xml
+++ b/app/src/main/res/layout/fragment_group_member_list.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
     
     <TextView
+    android:id="@+id/groupNameTv"
     android:text="Second Fragment"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/members_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/groupNameTv"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="26dp" />
+
+</LinearLayout>
