--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/email"
+            android:autofillHints="me@example.net"
             android:inputType="textEmailAddress" />
 
         <Button
