--- a/app/src/main/res/drawable/plus_button.xml
+++ b/app/src/main/res/drawable/plus_button.xml
@@ -1,4 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:viewportWidth="88.83"
     android:viewportHeight="88.83"
     android:width="88.83dp"
