event edit synchronise with PolyContext + wait for PolyContext to start map activity

--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -124,7 +124,8 @@
                         android:autofillHints=""
                         android:ems="10"
                         android:hint="@string/date_format"
-                        android:inputType="date" />
+                        android:digits="1234567890-"
+                        android:inputType="number" />
 
                 </TableRow>
 
@@ -145,7 +146,8 @@
                         android:autofillHints=""
                         android:ems="10"
                         android:hint="@string/date_format"
-                        android:inputType="date" />
+                        android:digits="1234567890-"
+                        android:inputType="number" />
 
                 </TableRow>
                 <TableRow
