--- a/app/src/main/res/layout/fragment_group_map.xml
+++ b/app/src/main/res/layout/fragment_group_map.xml
@@ -7,7 +7,14 @@
         android:id="@+id/mapView"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="-1dp" />
 
 
 </RelativeLayout>
